# urban-genome

./: .gitignore  README.md  automate.sh  docker-compose.yml  mkdocs.yml
NeoBridge/: NeoBridge.py  README.md  ipn2neo4j.py  linker.py  pyproject.toml  requirements.txt  setup-dependencies.sh  setup-venv.sh  spacy2neo4j.py
docs/: schema.md
site/: _nodelete
